Parsed data added

--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
                                     <pre id="transaction-tx-data" class="list-field text-left" data-mode="hex"></pre>
                                 </td>
                             </tr>
+                            <tr id="tx-parsed">
+                                <td>Parsed Data</td>
+                                <td class="text-right">
+                                    <pre id="transaction-tx-parsed" class="list-field text-left"></pre>
+                                </td>
+                            </tr>
                             <tr>
                                 <td>Status</td>
                                 <td id="txEthStatus" class="list-field"></td>
