Show address link in address and contract information

--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
                 <div id="addressDetails" class="content-page">
                     <div class="col-xs-12 col-md-6">
                         <div class="block">
-                            <h3><span id="address-type"></span> Information</h3>
+                            <h3><span class="address-type"></span> Information</h3>
                             <table class="table">
                             <tr>
-                                <td><span id="address-type"></span></td>
+                                <td><span class="address-type"></span></td>
                                 <td id="address-address" data-type="etherscan" data-options="no-contract" class="list-field"></td>
                             </tr>                                
                             <tr>
