Broadcasts in token information

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <tr>
                                 <td>Date</td>
                                 <td id="transfer-tx-timestamp" data-type="localdate" class="list-field"></td>
-                            </tr>                               
+                            </tr>
                             <tr>
                                 <td>From</td>
                                 <td id="transfer-send-from" data-type="ethplorer" class="list-field"></td>
@@ -77,6 +77,10 @@
                                 <td>Value</td>
                                 <td id="transfer-send-value" class="list-field"></td>
                             </tr>
+                            <tr>
+                                <td>Message</td>
+                                <td id="transfer-tx-message" class="list-field"></td>
+                            </tr>                            
                             <tr>
                                 <td>Status</td>
                                 <td id="txTokenStatus" class="list-field"></td>
