Operation type support

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div id="txDetails" class="content-page">
                     <div class="col-xs-12 col-md-6 token-related">
                         <div class="block">
-                            <h3>Token <span class="token-name"></span> Transfer</h3>
+                            <h3><span class="token-name"></span> <span class="token-operation-type"></span></h3>
                             <table class="table">
                             <tr>
                                 <td>Date</td>
@@ -67,15 +67,15 @@
                             </tr>
                             <tr>
                                 <td>From</td>
-                                <td id="transfer-send-from" data-type="ethplorer" class="list-field"></td>
+                                <td id="transfer-operation-from" data-type="ethplorer" class="list-field"></td>
                             </tr>
                             <tr>
                                 <td>To</td>
-                                <td id="transfer-send-to" data-type="ethplorer" class="list-field"></td>
+                                <td id="transfer-operation-to" data-type="ethplorer" class="list-field"></td>
                             </tr>
                             <tr>
                                 <td>Value</td>
-                                <td id="transfer-send-value" class="list-field"></td>
+                                <td id="transfer-operation-value" class="list-field"></td>
                             </tr>
                             <tr>
                                 <td>Message</td>
