Owner link fixed

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             </tr>
                             <tr>
                                 <td>Owner</td>
-                                <td id="transaction-token-owner" class="list-field"></td>
+                                <td id="transaction-token-owner" data-type="ethplorer" class="list-field"></td>
                             </tr>
                             <tr>
                                 <td>Total Supply</td>
