--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -24,12 +27,6 @@
                     <form onsubmit="Ethplorer.search($('#search').val()); return false;">
                         <input id="search" class="form-control" style="width: 200px;" placeholder="Search..." />
                     </form>
-                    <!--                    
-                    <li data-page="txDetails" class="active"><a>TX Details</a></li>
-                    <li data-page="txSearchForm"><a>TX Form</a></li>
-                    <li data-page="broadcast"><a>Broadcast TX</a></li>
-                    <li data-page="utils"><a>Utils</a></li>
-                    -->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li style="padding-top:8px;">
