--- a/index.html
+++ b/index.html
@@ -22,17 +22,20 @@
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="#"><img title="Ethplorer" src="/img/ethplorer-logo-48.png"></a>
+            </div>
             <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav navbar-right">
                     <form onsubmit="Ethplorer.search($('#search').val()); return false;">
                         <input id="search" class="form-control" style="width: 200px;" placeholder="Search..." />
                     </form>
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
+                <!--<ul class="nav navbar-nav  ">
                     <li style="padding-top:8px;">
                         <span id="network"></span>
                     </li>
-                </ul>
+                </ul>-->
             </div>
         </div>
     </nav>    
