--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="/cfg/config.ethplorer.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top" style="padding-bottom:0px;">
         <div class="container">
             <div class="navbar-header">
               <a class="navbar-brand" href="#"><img title="Ethplorer" src="/img/ethplorer-logo-48.png"></a>
@@ -31,15 +31,12 @@
                         <input id="search" class="form-control" style="width: 200px;" placeholder="Search..." />
                     </form>
                 </ul>
-                <!--<ul class="nav navbar-nav  ">
-                    <li style="padding-top:8px;">
-                        <span id="network"></span>
-                    </li>
-                </ul>-->
             </div>
         </div>
+        <div class="subnav">
+            <div class="container" id="ethplorer-path"></div>
+        </div>
     </nav>    
-    
     <div class="container">
         <div class="starter-template">
             <div id="page-create" class="page">    
