--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="/cfg/config.ethplorer.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" style="padding-bottom:0px;">
+    <nav class="navbar navbar-inverse" style="padding-bottom:0px;">
         <div class="container">
             <div class="navbar-header">
               <a class="navbar-brand" href="#"><img title="Ethplorer" src="/img/ethplorer-logo-48.png"></a>
