--- a/index.html
+++ b/index.html
@@ -20,16 +20,19 @@
     <script src="/cfg/config.ethplorer.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-inverse" style="padding-bottom:0px;">
+    <nav class="navbar navbar-inverse" style="padding-bottom:0px; padding-top:0px;">
         <div class="container">
             <div class="navbar-header">
-              <a class="navbar-brand" href="#"><img title="Ethplorer" src="/img/ethplorer-logo-48.png"></a>
+              <a class="navbar-brand" href="/"><img title="Ethplorer" src="/img/ethplorer-logo-48.png"></a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <form onsubmit="Ethplorer.search($('#search').val()); return false;">
-                        <input id="search" class="form-control" style="width: 200px;" placeholder="Search..." />
+                        <input id="search" class="form-control" style="width: 350px;" placeholder="Enter tx hash / contract address / sender address" />
                     </form>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li style="padding:16px; cursor:pointer;" onclick="document.location.href='/about.html';">About</li>
                 </ul>
             </div>
         </div>
