Navbar margin fix

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="navbar-header">
               <a class="navbar-brand" href="/"><img title="Ethplorer" src="/img/ethplorer-logo-48.png"></a>
             </div>
-            <div id="navbar" class="navbar">
+            <div id="navbar" class="navbar" style="margin-bottom: 0px;">
                 <ul class="nav navbar-nav navbar-right">
                     <form onsubmit="Ethplorer.search($('#search').val()); return false;">
                         <input id="search" class="form-control" style="width: 350px;" placeholder="Enter tx hash / contract address / sender address" />
