--- a/index.html
+++ b/index.html
@@ -307,6 +307,21 @@
             </div>
         </div>
     </div>
+    <!--
+    <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation" style="background:#0f0f0f;">
+        <div class="container">
+            <div class="navbar-text pull-left"><b>(c) 2016 <a href="https://everex.one" target="_blank">Everex</a>, <a href="mailto:mailto://support@ethplorer.io">support@ethplorer</a></b>
+            </div>
+            <div>
+                <ul class="nav navbar-nav navbar-center">
+                    <li><a href="/about.html">About</a></li>
+                    <li><a href="/about.html#disqus_thread">Discuss ethplorer</a></li>
+                    <li><a href="https://github.com/EverexIO/Ethplorer" target="_blank">Source code</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    -->
     <script>
         if(Ethplorer.Config.ga){
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
