Ethplorer design tuned.

--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
                                 <td>Total Supply</td>
                                 <td id="transaction-token-totalSupply" class="list-field"></td>
                             </tr>
-                            <tr>
+                            <tr class="hidden">
                                 <td>Total Transactions</td>
                                 <td>1000</td>
                             </tr>
-                            <tr>
+                            <tr class="hidden">
                                 <td>Last Activity</td>
                                 <td>2016-01-02 15:55:66 (block #1002322)</td>
                             </tr>
