Ethplorer design tuned.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div id="txDetails" class="content-page">
                     <div class="col-xs-12 col-md-6 token-related">
                         <div class="block">
-                            <h3><span class="token-name"></span> <span class="token-operation-type"></span></h3>
+                            <div class="block-header"><h3><span class="token-name"></span> <span class="token-operation-type"></span></h3></div>
                             <table class="table">
                             <tr class="blue">
                                 <td>Value</td>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="col-xs-12 col-md-6 token-related">
                         <div class="block">
-                            <h3>Token <span class="token-name"></span> Information</h3>
+                            <div class="block-header"><h3>Token <span class="token-name"></span> Information</h3></div>
                             <table class="table">
                             <tr>
                                 <td>Contract</td>
@@ -125,7 +125,7 @@
                     </div>
                     <div class="col-xs-12">
                         <div class="block">
-                            <h3>Transaction details</h3>
+                            <div class="block-header"><h3>Transaction details</h3></div>
                             <table class="table">
                             <tr>
                                 <td>Tx</td>
@@ -206,7 +206,7 @@
                 <div id="addressDetails" class="content-page">
                     <div class="col-xs-12 col-md-6">
                         <div class="block">
-                            <h3><span class="address-type"></span> Information</h3>
+                            <div class="block-header"><h3><span class="address-type"></span> Information</h3></div>
                             <table class="table">
                             <tr>
                                 <td><span class="address-type"></span></td>
@@ -229,11 +229,11 @@
                     </div>
                     <div class="col-xs-12 col-md-6">
                         <div class="block" id="address-token-balances">
-                            <h3>Token Balances</h3>
+                            <div class="block-header"><h3>Token Balances</h3></div>
                             <table class="table"></table>                           
                         </div>
                         <div class="block" id="address-token-details">
-                            <h3>Token <span id="address-token-name"></span> Information</h3>
+                            <div class="block-header"><h3>Token <span id="address-token-name"></span> Information</h3></div>
                             <table class="table">
                             <tr>
                                 <td>Symbol</td>
@@ -264,7 +264,7 @@
                     </div>
                     <div class="col-xs-12">
                         <div class="block poka-hz">
-                            <h3>Last Transactions</h3>
+                            <div class="block-header"><h3>Last Transactions</h3></div>
                             <table class="table">
                             <tr>
                                 <td>2016-01-02 15:55:66</td>
