--- a/index.html
+++ b/index.html
@@ -307,21 +307,42 @@
             </div>
         </div>
     </div>
-    <!--
-    <div class="navbar navbar-inverse navbar-fixed-bottom" role="navigation" style="background:#0f0f0f;">
+    <div id="disqus_thread" class="container"></div>
+    <script>
+
+    /**
+     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
+    /*
+    var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = '//https-ethplorer-io.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>    
+    <div class="navbar navbar-inverse footer" role="navigation" style="background:#0f0f0f;">
         <div class="container">
-            <div class="navbar-text pull-left"><b>(c) 2016 <a href="https://everex.one" target="_blank">Everex</a>, <a href="mailto:mailto://support@ethplorer.io">support@ethplorer</a></b>
+            <div class="text-center">
+                    <a href="/about.html" style="color: white;">About</a>
+                    &nbsp;&nbsp;&nbsp;
+                    <a href="/about.html#disqus_thread"  style="color: white;">Discuss ethplorer</a>
+                    &nbsp;&nbsp;&nbsp;
+                    <a href="https://github.com/EverexIO/Ethplorer" target="_blank">Source code</a>
             </div>
-            <div>
-                <ul class="nav navbar-nav navbar-center">
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/about.html#disqus_thread">Discuss ethplorer</a></li>
-                    <li><a href="https://github.com/EverexIO/Ethplorer" target="_blank">Source code</a></li>
-                </ul>
-            </div>
+            <div class="copyrights">
+                <b>(c) 2016 <a href="https://everex.one" target="_blank">Everex</a>
+                &nbsp;&nbsp;&nbsp;
+                <a href="mailto:mailto://support@ethplorer.io">support@ethplorer</a></b>
+            </div>            
         </div>
     </div>
-    -->
     <script>
         if(Ethplorer.Config.ga){
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
