--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
     <script src="/cfg/config.ethplorer.js"></script>
 </head>
 <body>
+    <div style="position: relative; min-height: 100vh;">
     <nav class="navbar navbar-inverse" style="padding-bottom:0px; padding-top:0px;">
         <div class="container">
             <div class="navbar-header">
-              <a class="navbar-brand" href="/"><img title="Ethplorer" src="/img/ethplorer-logo-48.png"></a>
+              <a class="navbar-logo" href="/"><img title="Ethplorer" src="/img/ethplorer-logo-48.png"></a>
             </div>
             <div id="navbar" class="navbar" style="margin-bottom: 0px;">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right" id="searchform">
                     <form onsubmit="Ethplorer.search($('#search').val()); return false;">
-                        <input id="search" class="form-control" style="width: 350px;" placeholder="Enter tx hash / contract address / sender address" />
+                        <input id="search" class="form-control" placeholder="Enter tx hash / contract address / sender address" />
                     </form>
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right" id="topmenu">
                     <li style="padding:16px; cursor:pointer;" onclick="document.location.href='/about.html';">About</li>
                 </ul>
             </div>
@@ -342,6 +343,7 @@
                 <a href="mailto:mailto://support@ethplorer.io">support@ethplorer</a></b>
             </div>            
         </div>
+    </div>
     </div>
     <script>
         if(Ethplorer.Config.ga){
