Operation status colors and some layout css fixes

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <td>Message</td>
                                 <td id="transfer-tx-message" class="list-field"></td>
                             </tr>                            
-                            <tr class="green">
+                            <tr id="operation-status">
                                 <td>Status</td>
                                 <td id="txTokenStatus" class="list-field"></td>
                             </tr>
@@ -195,7 +195,7 @@
                                     <pre id="transaction-tx-data" class="list-field text-left" data-mode="hex"></pre>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr id="tx-status">
                                 <td>Status</td>
                                 <td id="txEthStatus" class="list-field"></td>
                             </tr>
