--- a/index.html
+++ b/index.html
@@ -40,16 +40,13 @@
         <div class="subnav">
             <div class="container" id="ethplorer-path"></div>
         </div>
-    </nav>    
+    </nav>
     <div class="container">
         <div class="starter-template">
             <div id="page-create" class="page">    
-    
                 <div id="loader" class="text-center">
-                    <div id="scroller"></div>
-                    <i class="fa fa-search"></i>
-                    <div id="searchInProgressText">Searching...</div>
-                    <div id="pleaseWaitText">please wait</div>
+                    <div class="timer"></div>
+                    <div id="searchInProgressText">Search in progress</div>
                 </div>
 
                 <div id="error" class="content-page text-center">
