--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/ethplorer.css">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="referrer" content="never" />
     <meta name="referrer" content="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -338,7 +339,7 @@
             <div class="copyrights">
                 <b>(c) 2016 <a href="https://everex.one" target="_blank">Everex</a>
                 &nbsp;&nbsp;&nbsp;
-                <a href="mailto:mailto://support@ethplorer.io">support@ethplorer</a></b>
+                <a href="mailto://support@ethplorer.io">support@ethplorer.io</a></b>
             </div>            
         </div>
     </div>
