--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div id="page-create" class="page">    
                 <div id="loader" class="text-center">
                     <div class="timer"></div>
-                    <div id="searchInProgressText">Search in progress</div>
+                    <div id="searchInProgressText">search in progress...</div>
                 </div>
 
                 <div id="error" class="content-page text-center">
