--- a/index.html
+++ b/index.html
@@ -112,14 +112,6 @@
                                 <td>Total Supply</td>
                                 <td id="transaction-token-totalSupply" class="list-field"></td>
                             </tr>
-                            <tr class="hidden">
-                                <td>Total Transactions</td>
-                                <td>1000</td>
-                            </tr>
-                            <tr class="hidden">
-                                <td>Last Activity</td>
-                                <td>2016-01-02 15:55:66 (block #1002322)</td>
-                            </tr>
                             </table>                           
                         </div>
                     </div>
@@ -251,14 +243,6 @@
                                 <td>Total Supply</td>
                                 <td id="address-token-totalSupply" class="list-field"></td>
                             </tr>
-                            <tr class="poka-hz">
-                                <td>Total Transactions</td>
-                                <td>N/A</td>
-                            </tr>
-                            <tr class="poka-hz">
-                                <td>Last Activity</td>
-                                <td>N/A</td>
-                            </tr>
                             </table>                           
                         </div>                        
                     </div>
@@ -337,9 +321,9 @@
                     <a href="https://github.com/EverexIO/Ethplorer" target="_blank">Source code</a>
             </div>
             <div class="copyrights">
-                <b>(c) 2016 <a href="https://everex.one" target="_blank">Everex</a>
+                <span style="color:white;">(c) 2016</span> <a href="https://everex.one" target="_blank">Everex</a>
                 &nbsp;&nbsp;&nbsp;
-                <a href="mailto://support@ethplorer.io">support@ethplorer.io</a></b>
+                <a href="mailto://support@ethplorer.io">support@ethplorer.io</a>
             </div>            
         </div>
     </div>
