--- a/index.html
+++ b/index.html
@@ -212,10 +212,6 @@
                                 <td>Transactions</td>
                                 <td id="address-txCount" data-type="int" class="list-field"></td>
                             </tr>
-                            <tr class="poka-hz">
-                                <td>Last Activity</td>
-                                <td>2016-01-02 15:55:66 (block #1002322)</td>
-                            </tr>
                             </table>
                         </div>
                     </div>
@@ -227,6 +223,9 @@
                         <div class="block" id="address-token-details">
                             <div class="block-header"><h3>Token <span id="address-token-name"></span> Information</h3></div>
                             <table class="table">
+                            <tr>
+                                <td colspan="2" id="address-token-description" class="list-field"></td>
+                            </tr>                                
                             <tr>
                                 <td>Symbol</td>
                                 <td id="address-token-symbol" class="list-field"></td>
