--- a/index.html
+++ b/index.html
@@ -245,21 +245,10 @@
                             </table>                           
                         </div>                        
                     </div>
-                    <div class="col-xs-12">
-                        <div class="block poka-hz">
-                            <div class="block-header"><h3>Last Transactions</h3></div>
-                            <table class="table">
-                            <tr>
-                                <td>2016-01-02 15:55:66</td>
-                                <td>1002322</td>
-                                <td>0xba5a7edd010a6b2b88ba51daf360dee611d9ce5505c7ae420879334df2cdf7f2</td>
-                            </tr>
-                            <tr>
-                                <td>2016-01-02 15:55:66</td>
-                                <td>1002322</td>
-                                <td>0xba5a7edd010a6b2b88ba51daf360dee611d9ce5505c7ae420879334df2cdf7f2</td>
-                            </tr>                            
-                            </table>
+                    <div class="col-xs-12" id="address-issuances">
+                        <div class="block">
+                            <div class="block-header"><h3>Issuances</h3></div>
+                            <table class="table"></table>
                         </div>
                     </div>
                 </div>
