--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     </div>
                     <div class="col-xs-12" id="address-issuances">
                         <div class="block">
-                            <div class="block-header"><h3>Issuances</h3></div>
+                            <div class="block-header"><h3>Token <span id="address-token-name"></span> Issuances</h3></div>
                             <table class="table"></table>
                         </div>
                     </div>
