--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             <table class="table"></table>                           
                         </div>
                         <div class="block" id="address-token-details">
-                            <div class="block-header"><h3>Token <span id="address-token-name"></span> Information</h3></div>
+                            <div class="block-header"><h3>Token <span class="address-token-name"></span> Information</h3></div>
                             <table class="table">
                             <tr>
                                 <td colspan="2" id="address-token-description" class="list-field"></td>
@@ -247,7 +247,7 @@
                     </div>
                     <div class="col-xs-12" id="address-issuances">
                         <div class="block">
-                            <div class="block-header"><h3>Token <span id="address-token-name"></span> Issuances</h3></div>
+                            <div class="block-header"><h3>Token <span class="address-token-name"></span> Issuances</h3></div>
                             <table class="table"></table>
                         </div>
                     </div>
