New service format related changes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="/js/jquery.jsonrpc.js"></script>
+    <script src="/js/bignumber.js"></script>
     <script src="/js/ethplorer.js"></script>
     <script src="/cfg/config.ethplorer.js"></script>
 </head>
@@ -182,8 +183,8 @@
                             <tr>
                                 <td>Input Data</td>
                                 <td class="text-right">
-                                    <a onclick="Ethplorer.convert('transaction-tx-data', this);" class="pre-switcher">ASCII</a>
-                                    <pre id="transaction-tx-data" class="list-field text-left" data-mode="hex"></pre>
+                                    <a onclick="Ethplorer.convert('transaction-tx-input', this);" class="pre-switcher">ASCII</a>
+                                    <pre id="transaction-tx-input" class="list-field text-left" data-mode="hex"></pre>
                                 </td>
                             </tr>
                             <tr id="tx-status">
@@ -210,7 +211,7 @@
                             </tr>                               
                             <tr>
                                 <td>Transactions</td>
-                                <td id="address-txCount" data-type="int" class="list-field"></td>
+                                <td id="address-token-txsCount" data-type="int" class="list-field"></td>
                             </tr>
                             </table>
                         </div>
@@ -251,31 +252,19 @@
                             <table class="table"></table>
                         </div>
                     </div>
+                    <div class="col-xs-12" id="address-token-transfers" style="display:none;">
+                        <div class="block">
+                            <div class="block-header"><h3>Token <span class="address-token-name"></span> Last 10 Transfers</h3></div>
+                            <table class="table"></table>
+                        </div>
+                    </div>
+                    <div class="col-xs-12" id="address-transfers" style="display:none;">
+                        <div class="block">
+                            <div class="block-header"><h3>Last 10 Transfers</h3></div>
+                            <table class="table"></table>
+                        </div>
+                    </div>
                 </div>
-
-                <div id="txSearchForm" class="content-page">
-                    <h1>Get Transaction Details</h1>
-                    <form id="getTxDetails" role="form">
-                        <div class="row">
-                            <div class="form-group col-xs-6">
-                                <label for="hash">Tx Hash</label>
-                              <input type="text" class="form-control" id="hash" name="hash" value=""/>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="form-group col-xs-6">
-                                <label for="abi">ABI</label>
-                              <textarea rows="4" cols="50" class="form-control" id="abi" name="abi"></textarea>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="form-group col-xs-6">
-                                <button type="button" class="btn btn-primary btn-block" onClick="processTxDetailsForm();">Submit</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-    
             </div>
         </div>
     </div>
