Chainy TX support

--- a/index.html
+++ b/index.html
@@ -58,6 +58,33 @@
                 </div>
                 
                 <div id="txDetails" class="content-page">
+                    <div class="col-xs-12 col-md-6 chainy">
+                        <div class="block">
+                            <div class="block-header"><h3>Chainy <span id="chainy-op"><span></h3></div>
+                            <table class="table">
+                            <tr>
+                                <td>URL</td>
+                                <td id="chainy-url" class="list-field"></td>
+                            </tr>
+                            <tr>
+                                <td>SHA256 Hash</td>
+                                <td id="chainy-hash" class="list-field"></td>
+                            </tr>
+                            <tr>
+                                <td>Filename</td>
+                                <td id="chainy-filename" class="list-field"></td>
+                            </tr>
+                            <tr>
+                                <td>Filesize</td>
+                                <td id="chainy-filesize" class="list-field"></td>
+                            </tr>
+                            <tr>
+                                <td>Data</td>
+                                <td id="chainy-message" class="list-field"></td>
+                            </tr>
+                            </table>
+                        </div>
+                    </div>
                     <div class="col-xs-12 col-md-6 token-related">
                         <div class="block">
                             <div class="block-header"><h3><span class="token-name"></span> <span class="token-operation-type"></span></h3></div>
