Chainy link search

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                         <div class="block">
                             <div class="block-header"><h3>Chainy <span id="chainy-op"><span></h3></div>
                             <table class="table">
+                            <tr class="blue">
+                                <td>Short Link</td>
+                                <td id="chainy-link" class="list-field"></td>
+                            </tr>
                             <tr>
                                 <td>URL</td>
                                 <td id="chainy-url" class="list-field"></td>
