Chainy message width fix

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             </tr>
                             <tr>
                                 <td>Data</td>
-                                <td id="chainy-message" class="list-field"></td>
+                                <td id="chainy-message" class="list-field" style="white-space: normal !important;"></td>
                             </tr>
                             <tr class="blue">
                                 <td>Short Link</td>
