--- a/index.html
+++ b/index.html
@@ -243,6 +243,10 @@
                                 <td>Transactions</td>
                                 <td id="address-token-txsCount" data-type="int" class="list-field"></td>
                             </tr>
+                            <tr>
+                                <td>Transactions</td>
+                                <td id="address-contract-txsCount" data-type="int" class="list-field"></td>
+                            </tr>
                             </table>
                         </div>
                     </div>
@@ -291,6 +295,12 @@
                     <div class="col-xs-12" id="address-transfers" style="display:none;">
                         <div class="block">
                             <div class="block-header"><h3>Last 10 Transfers</h3></div>
+                            <table class="table"></table>
+                        </div>
+                    </div>
+                    <div class="col-xs-12" id="address-chainy-tx" style="display:none;">
+                        <div class="block">
+                            <div class="block-header"><h3>Last 10 Chainy Transactions</h3></div>
                             <table class="table"></table>
                         </div>
                     </div>
