GMT hint under the tables

--- a/index.html
+++ b/index.html
@@ -285,24 +285,28 @@
                             <div class="block-header"><h3>Token <span class="address-token-name"></span> Issuances</h3></div>
                             <table class="table"></table>
                         </div>
+                        <small>* all dates are displayed for <span class="local-time-offset"></span> timezone</small>
                     </div>
                     <div class="col-xs-12" id="address-token-transfers" style="display:none;">
                         <div class="block">
                             <div class="block-header"><h3>Token <span class="address-token-name"></span> Last 10 Transfers</h3></div>
                             <table class="table"></table>
                         </div>
+                        <small>* all dates are displayed for <span class="local-time-offset"></span> timezone</small>
                     </div>
                     <div class="col-xs-12" id="address-transfers" style="display:none;">
                         <div class="block">
                             <div class="block-header"><h3>Last 10 Transfers</h3></div>
                             <table class="table"></table>
                         </div>
+                        <small>* all dates are displayed for <span class="local-time-offset"></span> timezone</small>
                     </div>
                     <div class="col-xs-12" id="address-chainy-tx" style="display:none;">
                         <div class="block">
                             <div class="block-header"><h3>Last 10 Chainy Transactions</h3></div>
                             <table class="table"></table>
                         </div>
+                        <small>* all dates are displayed for <span class="local-time-offset"></span> timezone</small>
                     </div>
                 </div>
             </div>
