--- a/index.html
+++ b/index.html
@@ -289,21 +289,23 @@
                     </div>
                     <div class="col-xs-12" id="address-token-transfers" style="display:none;">
                         <div class="block">
-                            <div class="block-header"><h3>Token <span class="address-token-name"></span> Last 10 Transfers</h3></div>
+                            <div class="block-header"><h3>Token <span class="address-token-name"></span> Last 50 Transfers</h3></div>
                             <table class="table"></table>
+                            <div id="address-token-transfers-more" class="text-center"></div>
                         </div>
                         <small>* all dates are displayed for <span class="local-time-offset"></span> timezone</small>
                     </div>
                     <div class="col-xs-12" id="address-transfers" style="display:none;">
                         <div class="block">
-                            <div class="block-header"><h3>Last 10 Transfers</h3></div>
+                            <div class="block-header"><h3>Last 50 Transfers</h3></div>
                             <table class="table"></table>
+                            <div id="address-transfers-more" class="text-center"></div>
                         </div>
                         <small>* all dates are displayed for <span class="local-time-offset"></span> timezone</small>
                     </div>
                     <div class="col-xs-12" id="address-chainy-tx" style="display:none;">
                         <div class="block">
-                            <div class="block-header"><h3>Last 10 Chainy Transactions</h3></div>
+                            <div class="block-header"><h3>Last 50 Chainy Transactions</h3></div>
                             <table class="table"></table>
                         </div>
                         <small>* all dates are displayed for <span class="local-time-offset"></span> timezone</small>
