ERROR message removed

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
 
                 <div id="error" class="content-page text-center">
-                    <h1 class="text-danger">ERROR</h1>
+                    <h1 class="text-danger"></h1>
                     <h3 id="error-reason" class="text-danger"></h3>
                 </div>
                 
