--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div id="txDetails" class="content-page">
                     <div class="col-xs-12 col-md-6 chainy">
                         <div class="block">
-                            <div class="block-header"><h3>Chainy <span id="chainy-op"><span></h3></div>
+                            <div class="block-header"><h3><a href="/address/0xf3763c30dd6986b53402d41a8552b8f7f6a6089b" style="text-decoration: none;">Chainy</a> <span id="chainy-op"><span></h3></div>
                             <table class="table">
                             <tr>
                                 <td>URL</td>
