Custom tokens link

--- a/index.htm
+++ b/index.htm
@@ -115,12 +115,18 @@
                     </div>
                   </div>
               </div>  
-        </form>        </div>
-                  <div style="padding-top:32px;" class="t-descr t269__descr t-descr_xs">
-                  Donation addresses: <br />
-                  ETH: 0x0dE0BCb0703ff8F1aEb8C892eDbE692683bD8030<br />
-                  BTC: 1MKVGqyJA9YkVRuDsGCvnYVJ6ivNtfe289
-                  </div>
+            </form>
+        </div>
+
+        <div style="padding-top:32px;margin-bottom: 0px;" class="t-descr t269__descr t-descr_xs">
+            Do you need to view <a href="/tx/0xbfbf64b792a1416a501cb4234a667be66a8a4dfaa460d703a15678545ff27811">custom data</a> or non-standart token? Ask us.
+        </div>          
+          
+        <div style="padding-top:32px;" class="t-descr t269__descr t-descr_xs">
+            Donation addresses: <br />
+            ETH: 0x0dE0BCb0703ff8F1aEb8C892eDbE692683bD8030<br />
+            BTC: 1MKVGqyJA9YkVRuDsGCvnYVJ6ivNtfe289
+        </div>
 
       </div>
     </div>
