--- a/index.htm
+++ b/index.htm
@@ -92,7 +92,9 @@
                                         View tokens developed with ethereum <a href="https://github.com/ethereum/EIPs/issues/20"><span style="color: rgb(16, 133, 198);"><u data-redactor-tag="u">ERC20 standard</u></span></a><br />
                                         Explore contract supply, sender, receiver, and amount of transaction in token units.<br /><br />
                                         Look sample <a href="https://ethplorer.io/tx/0x5d5299f0e87d06a53c3b52458c823b98524b9f7b228485a9badf15c871bca9c7"><span style="color: rgb(16, 133, 198);"><u>transaction</u></span></a>, <a href="https://ethplorer.io/address/0xff71cb760666ab06aa73f34995b42dd4b85ea07b"><span style="color: rgb(16, 133, 198);"><u>token</u></span></a>, <a href="https://ethplorer.io/address/0x6016dca5eb73590fa875fcf32bdb74905a4323bd"><span style="color: rgb(16, 133, 198);"><u>address</u></span></a> or search yours.<br /><br />
-                                        <span style="font-size: 22px;">Disclaimer: </span><a href="/about.html"><strong></strong><span style="color: rgb(16, 133, 198);"><span style="font-size: 22px;"><span style="color: rgb(255, 255, 255);"><u>How it works and what's the problem?</u></span></span></span></a><a href="/about.html"><span style="color: rgb(16, 133, 198);"><u><strong data-redactor-tag="strong"></strong></u></span></a><br />
+                                        <span class="disclaimer">Disclaimer: 
+                                            <a href="/about.html"><u>How it works and what's the problem?</u></a><br />
+                                        </span>
                                     </div>
                                     <form id="form6767885" name="form6767885" class="js-form-proccess" role="form" action='https://ethplorer.io/search/' method='POST' data-formactiontype="1"  data-inputbox=".t269__blockinput">
                                         <div class="t269__input-container">
